--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
+        if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt --user; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
