--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,9 +27,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        python3 -m venv cutview-env
+        python -m venv cutview-env
         source cutview-env/bin/activate
-        if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt;
+        if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
 
     - name: Lint with flake8
       run: |
