--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,8 +9,8 @@ on:
   pull_request:
     branches: [ "master" ]
 
-#permissions:
-#  contents: read
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -37,4 +37,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        coverage run -m pytest -v -s
