--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "master" , "testing"]
-  pull_request:
     branches: [ "master" ]
+#  pull_request:
+#    branches: [ "master" ]
   workflow_dispatch:
 
 permissions:
