--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,8 +6,8 @@ name: Python application
 on:
   push:
     branches: [ "master" ]
-#  pull_request:
-#    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
 
 permissions:
@@ -24,6 +24,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install X11
+      run: |
+        sudo apt-get install xorg
+        sudo apt-get install openbox
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
