--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,14 @@ jobs:
         python-version: "3.10"
     - name: Install X11
       run: |
+        sudo apt-get update 
+        sudo apt-get upgrade
+        sudo apt-get install fglrx
+        sudo apt-get install xserver-xorg-core
+        sudo apt-get install xserver-xorg
         sudo apt-get install xorg
-        sudo apt-get install openbox
+        sudo apt-get install xorg openbox
+        sudo apt-get install ubuntu-desktop
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
