--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,9 +27,9 @@ jobs:
     - name: Install X11
       run: |
         sudo apt-get update 
-        sudo apt-get upgrade
         sudo apt-get install xorg
         sudo apt-get install xorg openbox
+#        sudo apt-get upgrade
 #        sudo apt-get install xserver-xorg-core
 #        sudo apt-get install xserver-xorg
 #
