--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,11 +29,7 @@ jobs:
         sudo apt-get update 
         sudo apt-get install xorg
         sudo apt-get install xorg openbox
-#        sudo apt-get upgrade
-#        sudo apt-get install xserver-xorg-core
-#        sudo apt-get install xserver-xorg
-#
-#        sudo apt-get install ubuntu-desktop
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -48,4 +44,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        python test_kivyunit.py
+        pytest
