--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
+          pip install -r support/requirements.txt
 
       - name: Lint with flake8
         run: |
