--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -65,6 +65,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r support/requirements.txt
+          pip install kivy.deps.angle 
+          set KIVY_GL_BACKEND=angle_sdl2
 
       - name: Lint with flake8
         run: |
