--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,9 +60,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
-        pip install docutils pygments pypiwin32 kivy.deps.glew
-        pip install kivy.deps.gstreamer
-        pip install kivy.deps.angle
+        pip install docutils pygments pypiwin32
 
     - name: Lint with flake8
       run: |
