--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -65,7 +65,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        pytest
+        pytest -s
   
   paper:
     runs-on: ubuntu-latest
