--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -67,6 +67,31 @@ jobs:
     - name: Test with unittest
       run: |
         pytest -s
+
+  mac_test:
+    runs-on: macos-latest
+
+    env:
+      KIVY_GL_BACKEND: 'angle_sdl2'
+    
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
+    
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          pip install -r support/requirements.txt
+    - name: Lint with flake8
+      run: |
+        flake8 --ignore=E402,E501
+    - name: Test with unittest
+      run: |
+        pytest -s
   
   paper:
     runs-on: ubuntu-latest
