--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -80,7 +80,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    
+    - name: Install X11
+      run: |
+          brew cask install xquartz
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
