--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -82,7 +82,7 @@ jobs:
         python-version: "3.10"
     - name: Install X11
       run: |
-          brew cask install xquartz
+          brew --cask install xquartz
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
