--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,7 @@ jobs:
         flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        pytest -s
+        pytest
         
   windows_test:
     runs-on: windows-latest
@@ -66,7 +66,7 @@ jobs:
         flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        pytest -s
+        pytest
 
   mac_test:
     runs-on: macos-latest
@@ -88,7 +88,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r support/requirements.txt
-          python -m pip install docutils pygments pypiwin32 kivy-deps.sdl2 kivy-deps.glew --extra-index-url https://kivy.org/downloads/packages/simple/
+          python -m pip install docutils pygments pypiwin32 "kivy[sdl2]" kivy-deps.glew --extra-index-url https://kivy.org/downloads/packages/simple/
     - name: Lint with flake8
       run: |
         flake8 --ignore=E402,E501
