--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+ # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
@@ -85,14 +85,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r support/requirements.txt
-          python -m pip uninstall kivy
-          python -m pip uninstall kivy.deps.sdl2
-          python -m pip uninstall kivy.deps.glew
-          python -m pip uninstall kivy.deps.gstreamer
-          python -m pip uninstall image
-          python -m pip install --upgrade pip wheel setuptools
-          python -m pip install docutils pygments pypiwin32 kivy.deps.sdl2 kivy.deps.glew --extra-index-url https://kivy.org/downloads/packages/simple/
-          python -m pip install kivy
+          pip uninstall kivy
+          pip uninstall kivy.deps.sdl2
+          pip uninstall kivy.deps.glew
+          pip uninstall kivy.deps.gstreamer
+          pip uninstall image
+          pip install --upgrade pip wheel setuptools
+          pip install docutils pygments pypiwin32 kivy.deps.sdl2 kivy.deps.glew --extra-index-url https://kivy.org/downloads/packages/simple/
+          pip install kivy
     - name: Lint with flake8
       run: |
         flake8 --ignore=E402,E501
