--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
-
+        pip install --force-reinstall numpy==1.26.4
     - name: Lint with flake8
       run: |
         flake8 --ignore=E402,E501
@@ -61,6 +61,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r support/requirements.txt
+        pip install --force-reinstall numpy==1.26.4
     - name: Lint with flake8
       run: |
         flake8 --ignore=E402,E501
