--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,19 +29,19 @@ jobs:
         sudo apt-get update 
         sudo apt-get install xorg
         sudo apt-get install xorg openbox
-
-    - name: Install dependencies
+    - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f support/requirements.txt ]; then pip install -r support/requirements.txt; fi
-        pip install --force-reinstall numpy==1.26.4
+        python -m pip install poetry
+    - name: Install dependencies
+      run: |
+        python -m poetry install
     - name: Lint with flake8
       run: |
-        flake8 --ignore=E402,E501
+        python -m poetry run python -m flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        pytest -v
+        python -m poetry run python -m pytest
         
   windows_test:
     runs-on: windows-latest
@@ -55,19 +55,19 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    
-    - name: Install dependencies
+    - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -r support/requirements.txt
-        pip install --force-reinstall numpy==1.26.4
+        python -m pip install poetry
+    - name: Install dependencies
+      run: |
+        python -m poetry install
     - name: Lint with flake8
       run: |
-        flake8 --ignore=E402,E501
+        python -m poetry run python -m flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        pytest -v
+        python -m poetry run python -m pytest
 
   paper:
     runs-on: ubuntu-latest
