--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -75,6 +75,32 @@ jobs:
         cd cutview
         python -m poetry run python -m pytest
 
+  mac_test:
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install poetry
+      - name: Install dependencies
+        run: |
+          cd cutview
+          python -m poetry install
+      - name: Lint with flake8
+        run: |
+          cd cutview
+          python -m poetry run python -m flake8 --ignore=E402,E501
+      - name: Test with unittest
+        run: |
+          cd cutview
+          python -m poetry run python -m pytest -s
   paper:
     runs-on: ubuntu-latest
     name: Paper Draft
