--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -85,6 +85,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: OpenGL management
+        run: |
+           system_profiler SPHardwareDataType
       - name: Install Poetry
         run: |
           python -m pip install --upgrade pip
