--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -120,4 +120,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: paper
-          path: paper.pdf
+          path: cutview/paper.pdf
