--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,13 +17,15 @@ jobs:
   linux_test:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.x
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.version }}
     - name: Install X11
       run: |
         sudo apt-get update 
@@ -48,16 +50,18 @@ jobs:
         
   windows_test:
     runs-on: windows-latest
-
+    strategy:
+      matrix:
+        version: [ "3.9", "3.10", "3.11", "3.12" ]
     env:
       KIVY_GL_BACKEND: 'angle_sdl2'
     
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.x
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.version }}
     - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
@@ -75,36 +79,6 @@ jobs:
         cd cutview
         python -m poetry run python -m pytest
 
-  mac_test:
-
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: OpenGL management
-        run: |
-          brew install glfw3
-          brew install glew
-      - name: Install Poetry
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-      - name: Install dependencies
-        run: |
-          cd cutview
-          python -m poetry install
-      - name: Lint with flake8
-        run: |
-          cd cutview
-          python -m poetry run python -m flake8 --ignore=E402,E501
-      - name: Test with unittest
-        run: |
-          cd cutview
-          python -m poetry run python -m pytest -s
   paper:
     runs-on: ubuntu-latest
     name: Paper Draft
