--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,15 +37,12 @@ jobs:
         python -m pip install poetry
     - name: Install dependencies
       run: |
-        cd cutview
         python -m poetry install
     - name: Lint with flake8
       run: |
-        cd cutview
         python -m poetry run python -m flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        cd cutview
         python -m poetry run python -m pytest -s
         
   windows_test:
@@ -68,15 +65,12 @@ jobs:
         python -m pip install poetry
     - name: Install dependencies
       run: |
-        cd cutview
         python -m poetry install
     - name: Lint with flake8
       run: |
-        cd cutview
         python -m poetry run python -m flake8 --ignore=E402,E501
     - name: Test with unittest
       run: |
-        cd cutview
         python -m poetry run python -m pytest
 
   paper:
@@ -89,9 +83,9 @@ jobs:
         uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
-          paper-path: cutview/paper.md
+          paper-path: paper.md
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: paper
-          path: cutview/paper.pdf
+          path: paper.pdf
