--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,11 +4,10 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.12"
-  jobs:
-    post_create_environment:
-      - pip install poetry
-    post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs
+
+python:
+  install:
+    - requirements: docs/requirements.txt
 
 sphinx:
   configuration: docs/source/conf.py
