--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   pypi:
     runs-on: windows-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/project/cutview/
+    permissions:
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -19,8 +24,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
-      - name: Build and Publish
+      - name: Build
         run: |
           python -m poetry version ${{ github.event.release.tag_name }}
           python -m poetry build
-          python -m poetry publish
+      - name: Publish to Pypi
+        uses: pypa/gh-action-pypi-publish@release/v1
