--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   pypi:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/project/cutview/
