--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,6 +70,15 @@ jobs:
       run: |
         python -m poetry run python -m pytest
 
+  docs:
+      runs-on: ubuntu-latest
+      - name: Trigger RTDs build
+        uses: dfm/rtds-action@v1
+        with:
+          webhook_url: ${{ secrets.RTDS_WEBHOOK_URL }}
+          webhook_token: ${{ secrets.RTDS_WEBHOOK_TOKEN }}
+          commit_ref: ${{ github.ref }}
+
   paper:
       runs-on: ubuntu-latest
       name: Paper Draft
