--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,6 +72,7 @@ jobs:
 
   docs:
       runs-on: ubuntu-latest
+      steps:
       - name: Trigger RTDs build
         uses: dfm/rtds-action@v1
         with:
