--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/project/cutview/
+      url: https://pypi.org/project/nccut/
     permissions:
       id-token: write
 
