--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -13,9 +13,11 @@ jobs:
       url: https://pypi.org/project/nccut/
     permissions:
       id-token: write
-
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
@@ -24,10 +26,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
+          python -m poetry self add poetry-bumpversion
       - name: Build
         run: |
           python -m poetry version ${{ github.event.release.tag_name }}
           python -m poetry build
+      - name: Commit Version Updates
+        uses: actions-js/push@master
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to Pypi
         uses: pypa/gh-action-pypi-publish@release/v1
 
