--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nccut"
-version = "0.2.8"
+version = "0.2.10"
 description = 'NcCut is a GUI for getting pixel data from images and data values from NetCDF files along linear transects.'
 authors = ["rchartra <rchartra@uw.edu>"]
 readme = "README.md"
@@ -36,6 +36,11 @@ pooch = "^1.8.2"
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
 sphinxcontrib-video = "^0.2.1"
+
+[[tool.poetry_bumpversion.replacements]]
+files = ["docs/conf.py"]
+search = "release = '{current_version}'"
+replace = "release = '{new_version}'"
 
 [build-system]
 requires = ["poetry-core"]
