--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -13,6 +13,7 @@ jobs:
       url: https://pypi.org/project/nccut/
     permissions:
       id-token: write
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
