--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -33,9 +33,12 @@ jobs:
           python -m poetry version ${{ github.event.release.tag_name }}
           python -m poetry build
       - name: Commit Version Updates
-        uses: actions-js/push@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update Version"
+          git push
       - name: Publish to Pypi
         uses: pypa/gh-action-pypi-publish@release/v1
 
