--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          gti add .
+          git add .
           git commit -m "Update Version on Release"
           git push
       - name: Push Changes
