--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -33,15 +33,10 @@ jobs:
           python -m poetry version ${{ github.event.release.tag_name }}
           python -m poetry build
       - name: Commit Version Updates
-        env:
-          USER_NAME: ${{ secrets._USER_NAME_ }}
-          USER_EMAIL: ${{ secrets._USER_EMAIL_ }}
         run: |
-          git config --local user.name "$USER_NAME"
-          git config --local user.email "$USER_EMAIL"
-          git add .
-          git commit -m "Update Version on Release"
-          git push
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Update Version on Release"
       - name: Push Changes
         uses: ad-m/github-push-action@master
         with:
