--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -43,7 +43,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: ${{ github.head_ref }}
       - name: Publish to Pypi
         uses: pypa/gh-action-pypi-publish@release/v1
   docs:
