--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ sphinx-rtd-theme = "^2.0.0"
 sphinxcontrib-video = "^0.2.1"
 
 [[tool.poetry_bumpversion.replacements]]
-files = ["docs/conf.py"]
+files = ["docs/source/conf.py"]
 search = "release = '{current_version}'"
 replace = "release = '{new_version}'"
 
