--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nccut"
-version = "v0.4.0"
+version = "0.4.1"
 description = 'NcCut is a GUI for getting pixel data from images and data values from NetCDF files along linear transects.'
 authors = ["rchartra <rchartra@uw.edu>"]
 readme = "README.md"
@@ -26,6 +26,7 @@ netCDF4 = "^1.7.1"
 opencv-python = "^4.10.0.84"
 img2pdf = "^0.5.1"
 Kivy = "^2.3.0"
+progress = "^1.6"
 
 [tool.poetry.group.test.dependencies]
 flake8 = "^7.1.0"
